src/test/ui/box/leak-alloc.stderr
error[E0597]: `alloc` does not live long enough
  --> $DIR/leak-alloc.rs:24:33
   |
LL |     let boxed = Box::new_in(10, alloc.by_ref());
   |                 ----------------^^^^^^^^^^^^^^-
   |                 |               |
   |                 |               borrowed value does not live long enough
   |                 argument requires that `alloc` is borrowed for `'static`
...
LL | }
   | - `alloc` dropped here while still borrowed

error[E0505]: cannot move out of `alloc` because it is borrowed
  --> $DIR/leak-alloc.rs:27:10
   |
LL |     let boxed = Box::new_in(10, alloc.by_ref());
   |                 -------------------------------
   |                 |               |
   |                 |               borrow of `alloc` occurs here
   |                 argument requires that `alloc` is borrowed for `'static`
...
LL |     drop(alloc);
   |          ^^^^^ move out of `alloc` occurs here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0505, E0597.
For more information about an error, try `rustc --explain E0505`.
